# RabbitHole

./: README.md  run.js
backend/: .env  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: session.py
backend/app/core/: config.py
backend/app/database/: base.py  connection.py
backend/app/models/: session.py
backend/app/schemas/: session.py
backend/app/services/: embeddings.py  graph_builder.py  metrics.py  rabbit_hole.py  session_processor.py
extension/: .env.development  .env.production  package.json  pnpm-lock.yaml  wxt.config.ts
extension/components/: Header.tsx  RecorderButton.tsx  Stats.tsx  StatusBadge.tsx
extension/constants/: api.ts  messages.ts  storage.ts
extension/entrypoints/: background.ts
extension/entrypoints/popup/: App.tsx
extension/hooks/: useRecorder.ts
extension/services/: api.ts  recorder.ts  storage.ts  tracker.ts
extension/types/: browsing.ts
extension/utils/: filters.ts  format.ts
frontend/: .env  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/graph/: CytoscapeGraph.tsx
frontend/src/components/ui/: AnimatedCounter.tsx  GlassCard.tsx  GlowButton.tsx  Magnetic.tsx
frontend/src/pages/Sessions/: index.tsx
frontend/src/styles/: index.css
